# NEBIUS_MAR_2026

./: .envrc  .gitignore  .gitmodules  AI_Agents_Tools_V2.ipynb  AI_Agents_Week2_Tools_V2.ipynb  CLAUDE.md  LLM_Architectures,_hometask_1.ipynb  LLM_Architectures,_week_2_Gradient_descent_&_Pytorch.ipynb  Week_6_practice_session.ipynb  env.claude.example  gitignore  main.py  pyproject.toml  settings.json
AI_Agents/: AI_Agents_Week2_Tools_V2.ipynb
LLM Architecture/: LLM_Architectures,_hometask_1.ipynb  LLM_Architectures,_week_2_Gradient_descent_&_Pytorch.ipynb  MNIST_Parallel_Hyperparameter_Tuning_Demo.ipynb  Week_6_practice_session(1).ipynb  Week_6_practice_session.ipynb  coords.csv  tips_fast_training.md  week_9_practice.ipynb
LLM Architecture/Homework_2/: RNN_LM_homework(1).ipynb  homework_CIFAR10(4).ipynb
LLM Architecture/Homework_3/: tiny_transformer_lm(2).ipynb
LLM Architecture/Neural_Forecasting/: LSTM.py  to_do.txt
LLM Architecture/Neural_Forecasting/lightning_logs/version_0/: events.out.tfevents.1774980048.NnamdiHP.467145.0
LLM Architecture/Neural_Forecasting/lightning_logs/version_1/: events.out.tfevents.1774984409.NnamdiHP.496079.0
LLM Architecture/Neural_Forecasting/lightning_logs/version_10/: events.out.tfevents.1775048238.NnamdiHP.57709.0
LLM Architecture/Neural_Forecasting/results/: run_20260331_205917.json  run_20260331_213437.json  run_20260401_140736.json  run_20260401_143744.json  run_20260401_145149.json  run_20260401_154553.json  run_20260405_114721.json  run_20260405_122347.json
(+19 files in other folders)
